--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build and Deploy
       uses: jenkey2011/vuepress-deploy@master
       env:
-        ACCESS_TOKEN: ${{ secrets.ACTION_TOKEN }}
+        ACCESS_TOKEN: ${{ secrets.ACTION_SECRET }}
         TARGET_REPO: bug-wheels/bug-wheels
         TARGET_BRANCH: gh_pages
         BUILD_SCRIPT: yarn && yarn docs:build
