--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "zhangyunan <zyndev@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
+    "docs:dev": "vuepress dev docs -p 28088",
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
